--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,520 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600;700&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: 'Sora', sans-serif;
+  /* background-color: #FBFCFF; */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.event-container, .products-outer-container,
+.products, .footer {
+  padding: 4rem 8rem;
 }
+
+
+footer li {
+    list-style: none;
+    cursor: pointer;
+  }
+  .footer {
+    padding: 4rem 8rem;
+  }
+  .btn {
+    font-family: 'Sora', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    background-color: #212121;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    color: white;
+  }
+
+
+  /*------------------------- NAVBAR ----------------------*/
+nav {
+    margin: 2rem 8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-links {
+    display: flex;
+    gap: 3rem;
+  }
+  .search-bar {
+    display: flex;
+    align-items: center;
+    width: 30%;
+    border: 1px solid #e4e5eb;
+    border-radius: 5px;
+    padding: 0 5px;
+  }
+  nav input {
+    border: none;
+    width: 100%;
+    padding: 5px;
+  }
+  .cart, .cart-small-screen {
+    display: flex;
+    padding: 12px;
+    background-color: #F1F1F1;
+    border-radius: 50%;
+    border: none;
+    position: relative;
+    transition: transform .4s ease;
+  }
+  .cart:hover, .cart-small-screen:hover{
+    transform: scale(1.1,1.1);
+  }
+  .cart-item-qty{
+    position: absolute;
+    top: 0;
+    right: 5px;
+    font-size: 12px;
+    color: #eee;
+    background-color: #f02d34;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    font-weight: 600;
+  }
+
+
+/*-------------------- HEADER SECTION ------------------*/
+.header {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
+}
+
+.Allproducts-container, .cart-wrapper, .header, .success {
+    margin: 4rem;
+}
+.Allproducts-container, .cart-wrapper, .header, .success {
+    margin: 4rem 6rem;
+}
+.header {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+}
+
+.header-left-side, .header-right-side {
+  display: flex;
+  flex: 1;
+}
+.header-left-side {
+  display: flex;
+  padding: 3rem 0 1rem;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.header-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2.5rem;
+}
+.header-content span {
+  background-color: #e1edff;
+  height: 40px;
+  width: 120px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: blue;
+  font-weight: 600;
+}
+.header-content h1 {
+  font-weight: 700;
+  font-size: 3.5rem;
+  line-height: 55px;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.header-content p {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 24px;
+  color: #666666;
+  width: 70%;
+}
+.header-content .btn {
+  padding: 1rem;
+  font-size: 1rem;
+  width: 35%;
+}
+.header-featured {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+.header-circle {
+  width: 600px;
+  height: 600px;
+  border-radius: 50%;
+  background-color: #FFECE3;
+}
+.header-circle .header-img {
+  position: absolute;
+  top: -5%;
+}
+
+/*-------------------- EVENTS SECTION ------------------*/
+.event-banner {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.subtitle {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+.subtitle h2 {
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: .03em;
+    color: #212121;
+}
+.subtitle span {
+    font-weight: 700;
+    text-align: center;
+}
+.subtitle span {
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: .1em;
+    color: #0062f5;
+}
+.subtitle h2, .subtitle span {
+    font-weight: 700;
+    text-align: center;
+}
+.event-banner-left {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.event-card:first-child {
+  background-color: #D6D6D8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  letter-spacing: 0.05em;  
+  color: #212121;
+}
+.event-card:first-child img {
+  width: 260px;
+  height: 200px;
+}
+.event-card:last-child {
+  background-color: #212121;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 2rem 2rem;
+}
+.event-card:first-child h3 {
+  font-weight: 700;
+  font-size: 1.75rem;
+  line-height: 35px;
+}
+.event-card:first-child span {
+  font-weight: 800;
+  font-size: 2.25rem;
+  line-height: 45px;
+}
+.event-card:first-child p {
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+}
+.event-card:last-child h3 {
+  font-weight: 800;
+  font-size: 2.25rem;
+  line-height: 45px;
+  letter-spacing: 0.03em;
+  margin-bottom: 1rem;
+}
+.event-card:last-child p {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+}
+.event-card button  {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 21px;
+  letter-spacing: 0.25em;
+  color: white;
+  border: none;
+  background: #474747;
+  padding: 0.5rem 2.5rem;
+  margin-top: 5px;
+  border-radius: 8px;
+}
+.event-banner-right {
+  flex: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+.event-banner-right-1, .event-banner-right-2 {
+  padding-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.event-banner-right-1 {
+  background-color: #EFE1C7;
+}
+.event-banner-right-2 {
+  background-color: #D7D7D9;
+}
+.event-banner-right-1 img, .event-banner-right-2 img {
+  width: 280px;
+  height: 340px; 
+  padding-top: 1rem;
+}
+.details {
+  width: 100%;
+  margin-left: 2.5rem;
+}
+.details p {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+}
+.details span:first-child {
+  position: relative;
+}
+.details span:first-child::after{
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: #212121;
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+}
+.details span:last-child {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 23px;
+  margin-left: 10px;
+}
+
+/*-------------------- FEATURES SECTION ------------------*/
+.features-section {
+    margin-top: 4rem;
+  }
+  .features-section .title {
+    display: flex;
+    justify-content: end;
+    padding: 0 8rem 2rem;
+    background: linear-gradient(180deg, white 50%, #FBFCFF 50%);
+  }
+  .features-section .title h1 {
+    font-weight: 700;
+    font-size: 2.75rem;
+    line-height: 55px;
+    letter-spacing: 0.03em;
+    color: #212121;
+    width: 45%;
+  }
+  .features-section .content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 8rem 4rem;
+    background-color: #FBFCFF;
+  }
+  .features-section .content .left {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .features-section .content .left .feature-background {
+    font-weight: 800;
+    font-size: 6.875rem;
+    line-height: 110px;
+    position: absolute;
+    color: #212121;
+    opacity: 0.07;
+    z-index: 1;
+  }
+  .features-section .content .left div {
+    width: 70%;
+    z-index: 2;
+  }
+  .features-section .content .left h3 {
+    font-weight: 600;
+    font-size: 1.125rem;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 1rem;
+  }
+  .features-section .content .left p {
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    color: #212121;
+  }
+  .features-section .content .right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+  }
+  .features-section .content .right div {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .features-section .content .right p {
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 26px;
+    text-align: justify;
+    color: #212121;
+  }
+  .features-section .btn {
+    font-size: 0.875rem;
+    width: 50%;
+  }
+  
+  /*-------------------- NEWSLETTER SECTION ------------------*/
+.newsletter {
+    padding: 10rem 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+  }
+  .newsletter-background {
+    font-weight: 800;
+    font-size: 7.5rem;
+    line-height: 151px;
+    color: #f2f3f7;
+    position: absolute;
+    z-index: -1;
+  }
+  .newsletter h1 {
+    margin-bottom: 1rem;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 40px;
+    letter-spacing: 0.03em;
+    color: #212121;
+  }
+  .newsletter p {
+    margin-bottom: 2rem;
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 26px;
+    color: #212121;
+  }
+  .newsletter input {
+    padding: 10px 120px 10px 20px;
+    background: #FCFCFC;
+    border: 1px solid gray;
+  }
+  .newsletter button {
+    padding: 10px 20px;
+    margin-left: 10px;
+    background-color: black;
+    color: white;
+    font-weight: 600;
+    font-size: 0.9rem;
+    line-height: 16px;
+  }
+  
+  /*-------------------- FOOTER SECTION ------------------*/
+  footer {
+    background-color: white;
+  }
+  .footer {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr; 
+  }
+  .footer .logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+  }
+  .icon-container {
+    display: flex;
+    gap: 1rem;
+  }
+  .icon-container div {
+    padding: 10px 12px;
+    background-color: #F1F1F1;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  footer li{
+    margin-top: 15px;
+  }
+  footer li:first-child {
+    margin-top: 25px;
+  }
+  footer p, footer li {
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 22px; 
+    color: #666666;
+  }
+  .footer-links h3 {
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+    color: #666666;
+  }
+  .copyright {
+    margin-top: 6rem;
+    border-top: 1px solid #666666;
+    display: grid;
+    grid-template-columns: auto auto auto;
+  }
+  .copyright p {
+    margin: 1.5rem 8rem;
+  }
+  .copyright span {
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 15px;
+    color: #212121;
+  }
+  
